Mindustry 7.0 support